[gd_scene format=3 uid="uid://cqhge3cur1vdk"]

[ext_resource type="Script" uid="uid://dsg3vxeh8i1cb" path="res://scripts/ui/settings_menu.gd" id="1_qwcqe"]
[ext_resource type="Script" uid="uid://drjmdg0h74vs0" path="res://scripts/ui/check_box_button.gd" id="2_mhswj"]

[node name="SettingsMenu" type="Control" unique_id=1205346910 node_paths=PackedStringArray("tab_rows")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwcqe")
tab_rows = [NodePath("TabContainer/General/GeneralRows"), NodePath("TabContainer/Accessibility/AccessibilityRows"), NodePath("TabContainer/Video/VideoRows"), NodePath("TabContainer/Audio/AudioRows"), NodePath("TabContainer/Credits/CreditsRows")]

[node name="Background" type="ColorRect" parent="." unique_id=620160617]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.2509804)

[node name="ClickOutside" type="Button" parent="." unique_id=1261453468]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TransparentButton"
action_mode = 0

[node name="TabContainer" type="TabContainer" parent="." unique_id=648754932]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1344.0
offset_top = -800.0
offset_right = 1344.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="General" type="MarginContainer" parent="TabContainer" unique_id=192808983]
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 0

[node name="GeneralRows" type="VBoxContainer" parent="TabContainer/General" unique_id=1845033693]
layout_mode = 2

[node name="Accessibility" type="MarginContainer" parent="TabContainer" unique_id=1900720316]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 1

[node name="AccessibilityRows" type="VBoxContainer" parent="TabContainer/Accessibility" unique_id=963055394]
layout_mode = 2

[node name="GameSpeed" type="HBoxContainer" parent="TabContainer/Accessibility/AccessibilityRows" unique_id=1212348849]
layout_mode = 2

[node name="GameSpeedLabel" type="Label" parent="TabContainer/Accessibility/AccessibilityRows/GameSpeed" unique_id=2023089637]
layout_mode = 2
size_flags_horizontal = 3
text = "Game Speed"

[node name="GameSpeedSlider" type="HSlider" parent="TabContainer/Accessibility/AccessibilityRows/GameSpeed" unique_id=1953709401]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
max_value = 1.0
step = 0.01
value = 1.0

[node name="Video" type="MarginContainer" parent="TabContainer" unique_id=1504626122]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 2

[node name="VideoRows" type="VBoxContainer" parent="TabContainer/Video" unique_id=650188835]
layout_mode = 2

[node name="Display" type="HBoxContainer" parent="TabContainer/Video/VideoRows" unique_id=660990834]
unique_name_in_owner = true
layout_mode = 2

[node name="DisplayLabel" type="Label" parent="TabContainer/Video/VideoRows/Display" unique_id=1132849957]
layout_mode = 2
size_flags_horizontal = 3
text = "Display"

[node name="DisplayOptionButton" type="OptionButton" parent="TabContainer/Video/VideoRows/Display" unique_id=77908997]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
selected = 1
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2

[node name="VSync" type="HBoxContainer" parent="TabContainer/Video/VideoRows" unique_id=1476775083]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="TabContainer/Video/VideoRows/VSync" unique_id=566626700]
layout_mode = 2
size_flags_horizontal = 3
text = "V-Sync"

[node name="VSyncCheckBoxButton" type="Button" parent="TabContainer/Video/VideoRows/VSync" unique_id=1737516527]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
size_flags_stretch_ratio = 1.5
theme_type_variation = &"CheckBoxButtonChecked"
script = ExtResource("2_mhswj")
default_checked = true

[node name="Audio" type="MarginContainer" parent="TabContainer" unique_id=540278394]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 3

[node name="AudioRows" type="VBoxContainer" parent="TabContainer/Audio" unique_id=1335405688]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="TabContainer/Audio/AudioRows" unique_id=857184356]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="TabContainer/Audio/AudioRows/MasterVolume" unique_id=1140913996]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="TabContainer/Audio/AudioRows/MasterVolume" unique_id=1036764950]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 1.5
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFXVolume" type="HBoxContainer" parent="TabContainer/Audio/AudioRows" unique_id=688067080]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="TabContainer/Audio/AudioRows/SFXVolume" unique_id=1677449682]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="TabContainer/Audio/AudioRows/SFXVolume" unique_id=1775904426]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 1.5
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="TabContainer/Audio/AudioRows" unique_id=1268373460]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="TabContainer/Audio/AudioRows/MusicVolume" unique_id=1054605637]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="TabContainer/Audio/AudioRows/MusicVolume" unique_id=830310834]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 1.5
max_value = 1.0
step = 0.01
value = 1.0

[node name="Credits" type="MarginContainer" parent="TabContainer" unique_id=2018229073]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 32
metadata/_tab_index = 4

[node name="CreditsRows" type="VBoxContainer" parent="TabContainer/Credits" unique_id=784131262]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Credits/CreditsRows" unique_id=1891937946]
layout_mode = 2
text = "Credits:

Caeden Statia: Project Manager | Programmer
fragskye: Programming and Asset Implementation
Joyceisdrawing: Pixel Art
Justin WK | Thewk00: UI and Background Art
KaiserLee | KaiserLee: Character and Level Design
Liam | 12090113:  Programming
Matheus Werneck | MatheusW: Programming
Reann Ubungen: Music
Wyatt Sylvester | Phyzith: Writer and Dialogue Programing"

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1669056859]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -384.0
offset_right = 512.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ClickOutside" to="." method="_on_click_outside_pressed"]
[connection signal="value_changed" from="TabContainer/Accessibility/AccessibilityRows/GameSpeed/GameSpeedSlider" to="." method="_on_game_speed_slider_value_changed"]
[connection signal="item_selected" from="TabContainer/Video/VideoRows/Display/DisplayOptionButton" to="." method="_on_display_option_button_item_selected"]
[connection signal="checked" from="TabContainer/Video/VideoRows/VSync/VSyncCheckBoxButton" to="." method="_on_v_sync_check_box_button_checked"]
[connection signal="value_changed" from="TabContainer/Audio/AudioRows/MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/AudioRows/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/AudioRows/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
